--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-    <header class="header">git remote add origin https://github.com/Milia-K/week_7_2.git
+    <header class="header">
         
         <nav class="navigation">
             <a class="menu" href="#">Home</a>
