--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header class="header">
-        
+        <img src="assets/images/logo.png" alt="logo">
         <nav class="navigation">
             <a class="menu" href="#">Home</a>
             <a class="menu" href="#">the hut</a>
